Prevent wrapping text in menu items

--- a/src/style.css
+++ b/src/style.css
@@ -51,4 +51,5 @@
 .phylocanvas-context-menu a {
   color: rgba(0, 0, 0, 0.87);
   text-decoration: none;
+  white-space: nowrap;
 }
